@@ -117,6 +117,7 @@ This field describes the impact of a bug.
 <p>
  
 <table>
+<tr><th>Blocker</th><td>Blocks development and/or testing work
 <tr><th>Critical</th><td>crashes, loss of data, severe memory leak 
 <tr><th>Major</th><td>major loss of function 
 <tr><th>Minor</th><td>minor loss of function, or other problem where easy workaround is present 
@@ -205,6 +206,6 @@ status field appropriately.
 <hr>
 <address><a href="http://home.netscape.com/people/terry/">Terry Weissman &lt;terry@netscape.com&gt;</a></address>
 <!-- hhmts start -->
-Last modified: Mon Mar  8 18:31:07 1999
+Last modified: Fri Apr 30 13:14:35 1999
 <!-- hhmts end -->
 </body> </html>
